crates/reinhardt-core/macros/tests/ui/dto/fail/enum_rejected.stderr
error: #[dto] can only be applied to structs
 --> tests/ui/dto/fail/enum_rejected.rs:6:10
  |
6 | pub enum Status {
  |          ^^^^^^
